fix overflow

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -6,6 +6,11 @@
 
 html, body {
   overflow-x: hidden;
+  background-color: #fff;
+}
+
+body {
+  overflow-y: hidden;
 }
 
 hr {
